--- a/index.html
+++ b/index.html
@@ -3,8 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+<div class="card" style="width: 500px;">
+    <div class="card-body">
+        <h5 class="card-title">Название карточки</h5>
+        <h6 class="card-subtitle mb-2 text-muted">Подзаголовок карты</h6>
+
+        <div class="wrap-body">
+            <form class="row g-3">
+                <div class="col-md-4">
+                    <label for="validationCustom01" class="form-label">Имя</label>
+                    <input type="text" class="form-control" id="validationCustom01" >
+                </div>
+                <div class="col-md-4">
+                    <label for="validationCustom02" class="form-label">Фамилия</label>
+                    <input type="text" class="form-control" id="validationCustom02">
+                </div>
+                <div class="col-md-4">
+                    <label for="validationCustomUsername" class="form-label">Имя пользователя</label>
+                    <div class="input-group has-validation">
+                        <span class="input-group-text" id="inputGroupPrepend">@</span>
+                        <input type="text" class="form-control" id="validationCustomUsername"
+                               aria-describedby="inputGroupPrepend" >
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <label for="validationCustom03" class="form-label">Город</label>
+                    <input type="text" class="form-control" id="validationCustom03" name="city"  >
+                </div>
+                <div style="width: 200px;" class="col-md-3">
+                    <label for="validationCustom04" class="form-label">Область</label>
+                    <select class="form-select" id="validationCustom04" >
+                        <option selected value="">Выберите...</option>
+                        <option value="161">Ростовская</option>
+                        <option value="777">Московская</option>
+                        <option value="666">Лосанджелеская</option>
+                    </select>
+                </div>
+                <div class="col-12">
+                    <div id="checkTest" class="form-check">
+                        <input class="form-check-input" type="checkbox" id="invalidCheck" >
+                        <label class="form-check-label" for="invalidCheck">
+                            Примите условия и соглашения
+                        </label>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <button type="button" class="btn btn-primary">Отправить форму</button>
+                </div>
+            </form>
+        </div>
+
+    </div>
+</div>
+
+<div class="card" style="width: 500px;">
+    <div class="card-body">
+        <h5 class="card-title">Название карточки</h5>
+        <h6 class="card-subtitle mb-2 text-muted">Подзаголовок карты</h6>
+    </div>
+</div>
+
+<script src="index.js"></script>
 </body>
 </html>
